--- a/중간고사1번_심장질환환자_예측.ipynb
+++ b/중간고사1번_심장질환환자_예측.ipynb
@@ -1,7 +1,41 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b51ac51a",
+   "metadata": {
+    "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
+    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
+    "execution": {
+     "iopub.execute_input": "2022-04-18T12:52:41.259156Z",
+     "iopub.status.busy": "2022-04-18T12:52:41.258323Z",
+     "iopub.status.idle": "2022-04-18T12:52:41.274747Z",
+     "shell.execute_reply": "2022-04-18T12:52:41.273645Z"
+    },
+    "papermill": {
+     "duration": 0.034445,
+     "end_time": "2022-04-18T12:52:41.277319",
+     "exception": false,
+     "start_time": "2022-04-18T12:52:41.242874",
+     "status": "completed"
+    },
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/kaggle/input/2022-ml-midterm-p1/submit.csv\n",
+      "/kaggle/input/2022-ml-midterm-p1/train.csv\n",
+      "/kaggle/input/2022-ml-midterm-p1/test.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# This Python 3 environment comes with many helpful analytics libraries installed\n",
     "# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n",
@@ -20,13 +54,7 @@
     "\n",
     "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\" \n",
     "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -60,16 +88,6 @@
     "np.random.seed(seed)\n",
     "os.environ[\"PYTHONHASHSEED\"] = str(seed)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
   },
   {
    "cell_type": "code",
